package com.example.demo3.models;

public class Cliente extends Utente{

	public Cliente() {
		super();
	}
	
	
	public Cliente(String nome, String cognome, String email, String password) {
		super(nome, cognome, email, password);
		// TODO Auto-generated constructor stub
	}
	
}
